# SHiVAi

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  pyproject.toml  readme.md  requirements.txt  setup.py
apptainer/: README.md  apptainer.recipe  apptainer_synthseg_tf.recipe  config_example.yml  precomp_synthseg.py  run_shiva.py  synthseg.Dockerfile
notebooks/: analyse_image _irm.ipynb
scripts/: module_wf_script.py  predict.py  preproc_brainmask.py  preproc_wf_adapted_percentile.py  preprocess.py  reg_preprocessing.py  retrain_brainmask.py  run_preproc_wf.py  script_dual_recalage.py  script_wf.py  script_wf_pretrained_brainmask.py  shiva.py  slicer_run_preprocessing.py  stepwise.py  test.py  wf_brainmask.py  wf_dual_brainmask.py
share/: randd_cacert.pem
shivautils/: 20230608_create_BG.py  PVS_postprocessing.py  create_BG.py  image.py  isocontour_board.py  metrics.py  quantification_WMH_latventricles.py  setup.py  stats.py
shivautils/interfaces/: MakeDistanceVentricleMap.sh  image.py  interfaces_post_processing.py  post.py  shiva.py
shivautils/notebooks/: conform.html  custom_filename.html
shivautils/postprocessing/: pvs.py  report.py  wmh.py
shivautils/scripts/: module_wf_script.py  predict.py  preproc_pretrained_brainmask.py  run_preproc_wf.py  script_wf.py  script_wf_pretrained_brainmask.py
shivautils/shivautils/interfaces/: image.py
shivautils/shivautils/workflows/: wf_pretrained_brainmask.py
shivautils/tests/: test.py  testimage.py
shivautils/trunk/notebooks/: conform.html  conform.ipynb  custom_filename.html
shivautils/trunk/scripts/: preproc_wf_adapted_percentile.py  preprocess.py  run_preproc_wf.py  script_recalage.py  script_wf.py  slicer_run_preprocessing.py  wf_BIDS.py  wf_brainmask.py  wf_dual_brainmask.py  wf_predict.py
shivautils/trunk/shivautils/: image.py  isocontour_board.py  metrics.py  particular_case_utils.py  quantification_WMH_Ventricals_Maps.py  stats.py  test.py
shivautils/trunk/shivautils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shivautils/trunk/templates/: template.py
shivautils/trunk/tests/: read_file_h5.py  test.py  testimage.py
shivautils/workflows/: README.md  SWI_post_processing.py  SWI_predict.py  SWI_preprocessing.py  T1_preprocessing.py  coregistration.py  coregistration_swi.py  direct_dual_preprocessing.py  direct_dual_processing.py  dual_full_processing.py  dual_interpolation.py  dual_post_processing.py  dual_post_processing_container.py  dual_predict.py  dual_preprocessing.py  dual_preprocessing_dicom.py  interp_below_voxel.py  param_wf.py  preprocessing_retrain_brainmask.py  reg_preprocessing_wf.py  shiva_cmb.py  shiva_pvs.py  shiva_wmh.py  slicer_preprocessing.py  swi_postprocessing.py  test_dual_preprocessing.py  test_metrics_prediction.py  test_single_interpolation.py  vrs_preprocessing.py  wf_predict.py  wf_pretrained_brainmask copy.py  wf_pretrained_brainmask.py
shivautils/workflows/specifics/: recalage_dual_ants.py  test_single_interpolation.py
singularity/: README.md  apptainer.recipe  apptainer_synthseg.recipe  apptainer_synthseg_tf.recipe  config_dual.yml  config_example.yml  precomp_synthseg.py  readme.md  run_shiva.py  singularity_tf.recipe
src/shivai/interfaces/: container.py  docker.py  image.py  post.py  shiva.py  singularity.py
src/shivai/old_scripts/: preprocess.py  retrain_brainmask.py  slicer_run_preprocessing.py
src/shivai/old_workflows/: SWI_postprocessing.py  SWI_predict.py  SWI_preprocessing.py  coregistration.py  dual_full_processing.py  dual_post_processing.py  dual_post_processing_container.py  dual_predict.py  dual_preprocessing_dicom.py  preprocessing_retrain_brainmask.py  shiva_cmb.py  shiva_pvs.py  shiva_wmh.py  slicer_preprocessing.py  swi_coregistration.py  synthseg.py  vrs_preprocessing.py
src/shivai/postprocessing/: custom_parc.py  lobarseg.py  report.py  report_template.html
src/shivai/scripts/: README.md  predict.py  predict_multi.py  prep_json.py  run_shiva.py  shiva.py
src/shivai/utils/: container_config.py  metrics.py  misc.py  parsing.py  preprocessing.py  quality_control.py  shiva_runner.py  stats.py
src/shivai/workflows/: dcm2nii_grafting.py  dual_preprocessing.py  main_workflow.py  post_processing.py  predict_wf.py  preprocessing.py  preprocessing_custom_seg.py  preprocessing_fs_precomp.py  preprocessing_premasked.py  preprocessing_shiva_masking.py  preprocessing_swi_reg.py  preprocessing_swomed_pre_synthseg.py  preprocessing_synthseg.py  preprocessing_synthseg_precomp.py  qc_preproc.py  shiva_mask_wf.py  swomed_graft_infiles.py  swomed_shivai_wf.py  swomed_ss_shivai_wf.py
src/shivautils/: metrics.py  preprocessing.py  stats.py
src/shivautils/interfaces/: datasink.py  image.py  post.py  shiva.py  singularity.py
src/shivautils/old_scripts/: preprocess.py  retrain_brainmask.py  slicer_run_preprocessing.py
src/shivautils/old_workflows/: SWI_postprocessing.py  SWI_predict.py  SWI_preprocessing.py  coregistration.py  dual_post_processing.py  dual_predict.py  dual_preprocessing_dicom.py  preprocessing_retrain_brainmask.py  shiva_cmb.py  swi_coregistration.py
src/shivautils/postprocessing/: background.py  basalganglia.py  custom_parc.py  isocontour.py  lobarseg.py  old_report_styling.css  printed_styling.css  report.py  report_styling.css  report_template.html
src/shivautils/scripts/: precomp_synthseg.py  predict.py  prep_json.py  preprocess.py  retrain_brainmask.py  run_shiva.py  shiva.py  shiva_dual.py
src/shivautils/utils/: misc.py  parsing.py  preprocessing.py  quality_control.py  shiva_runner.py  stats.py
src/shivautils/workflows/: SWI_postprocessing.py  SWI_predict.py  SWI_preprocessing.py  T1_predict.py  dcm2nii_grafting.py  dual_full_processing.py  dual_post_processing.py  dual_post_processing_container.py  dual_predict.py  dual_preprocessing.py  dual_preprocessing_dicom.py  main_workflow.py  post_processing.py  predict.py  predict_wf.py  preprocessing.py  qc_preproc.py  (+14 more)
step_by_step/: README.md
step_by_step_mixed_approach/: README.md
templates/: template.py
tests/: testimage.py
(+18 files in other folders)
