[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shivai"
dynamic = ["version"]
authors = [
    { name = "Yann RIO", email = "yrio@fealinx.com" },
    { name = "Pierre-Yves HERVE", email = "pyherve@fealinx.com" },
    { name = "Victor NOZAIS", email = "vnozais@fealinx.com" },
]
maintainers = [
    { name = "Pierre-Yves HERVE", email = "pyherve@fealinx.com" },
    { name = "Victor NOZAIS", email = "vnozais@fealinx.com" },
]
description = "Package for preprocessing and automatic, AI-based segmentation of perivascular scpaces (PVS), white-matter hyperintensities (WMH), and cerebral microbleeds (CMB)."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "MRI",
    "AI",
    "segmentation",
    "PVS",
    "WMH",
    "CMB",
    "T1",
    "FLAIR",
    "SWI",
]
license = { text = "GNU General Public License v3 (GPLv3)" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "bokeh",
    "matplotlib",
    "seaborn",
    "networkx>=2.8.7",
    "nibabel>=4.0.2",
    "nipype>=1.7.0",
    "numpy",
    "pandas",
    "pybids",
    "pydot",
    "pydotplus",
    "pyyaml",
    "quickshear",
    "scikit-image",
    "scipy>=1.7.3",
    "typing-extensions",
    "weasyprint",
]

[project.optional-dependencies]
TF_CUDA = ["tensorflow[and-cuda]==2.17.0", "keras==3.6.0"]
TF = ["tensorflow==2.17.0", "keras==3.6.0"]

[project.scripts]
shiva = "shivai.scripts.shiva:main"
shiva_predict = "shivai.scripts.predict:main"
shiva_predict_multi = "shivai.scripts.predict_multi:main"
shiva_contained = "shivai.scripts.run_shiva:main"
shiva_prep_json = "shivai.scripts.prep_json:main"

[tool.setuptools.dynamic]
version = { attr = "shivai.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"shivai.postprocessing" = ["*.html", "*.css", "*.png"]
"shivai.scripts.snglrt_dummy_bin" = ["*"]
